# cooklang-find

./: .gitignore  BINDINGS.md  Cargo.toml  Makefile  Package.swift  README.md  uniffi.toml
.github/workflows/: build-bindings.yml  ci.yml  release.yml
Sources/CooklangFind/: CooklangFind.swift
docs/plans/: 2026-02-16-related-files-design.md  2026-02-16-related-files.md
scripts/: build-kotlin.sh  build-swift.sh
src/: ffi.rs  lib.rs
src/fetcher/: mod.rs
src/model/: metadata.rs  mod.rs  recipe_entry.rs
src/recipe/: mod.rs
src/search/: mod.rs  model.rs
src/tree/: mod.rs  model.rs
