[package]
name = "cooklang-find"
version = "0.2.1"
edition = "2021"
description = "Library for finding and managing Cooklang recipes in the filesystem"
license = "MIT"

[dependencies]
camino = { version = "1.1", features = ["serde1"] }
cooklang = { version = "0.16.1" }
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
indoc = "2"
